--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 #top {
   min-height: 80px;
   border: 3px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #rubrik {
   background-color: aqua;
   border: 1px solid black;
+  padding: 0 60px;
 }
 
 h1 {
   text-align: center;
 }
 
+a {
+  font-family: monospace;
+  font-size: 20px;
+}
