--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+div {
+  width: 80%;
+}
+
 #top {
   min-height: 80px;
   border: 3px solid red;
@@ -40,4 +50,8 @@ a {
 #rubrikh {
   background-color: pink;
   border: 2px solid black;
+}
+
+#botten {
+  border: 3px solid yellow;
 }
